Opened 3 years ago

Closed 22 months ago

Last modified 22 months ago

#17761 closed bug (fixed)

Vulcan Death Grip does not work when the deskbar is compressed.

Reported by: bbjimmy Owned by: jscipione
Priority: normal Milestone: R1/beta5
Component: Applications/Deskbar Version: R1/beta3
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev56317 x86_64

Compress the Deskbar into one of its compact layouts so that one has to press the list button to see the list of running programs.

Lainch an app. Try to kill it with the Vulcan Death Grip. It minimizes the app but does not kill it.

Change History (3)

comment:1 by jscipione, 22 months ago

Status: newin-progress

comment:2 by waddlesplash, 22 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: in-progressclosed

Merged in hrev56916.

comment:3 by bbjimmy, 22 months ago

Nice!

Note: See TracTickets for help on using tickets.