Deskbar: Make Vulcan Death Grip work in mini mode

... along with other keyboard shortcuts.

Fixes #17761

Change-Id: I0e13e5fc6c90236936120ff0dda1246123576d37